--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,12 +7,74 @@
     tools:context=".activity.LoginActivity">
 
     <TextView
+        android:id="@+id/label_login_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:layout_marginBottom="36dp"
+        android:text="The Bookist"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toTopOf="@id/field_username"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/field_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Username..."
+        android:layout_marginBottom="12dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginLeft="48dp"
+        android:inputType="text"
+        app:layout_constraintBottom_toTopOf="@id/center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Space
+        android:id="@+id/center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/field_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="48dp"
+        android:layout_marginLeft="48dp"
+        android:hint="Password..."
+        android:inputType="textPassword"
+        app:layout_constraintTop_toBottomOf="@id/center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/button_createacc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Create Account"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="12dp"
+        app:layout_constraintTop_toBottomOf="@id/field_pass"
+        app:layout_constraintLeft_toLeftOf="@id/field_pass"
+        />
+
+    <Button
+        android:id="@+id/button_login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="12dp"
+        app:layout_constraintTop_toBottomOf="@id/field_pass"
+        app:layout_constraintRight_toRightOf="@id/field_pass"
+        />
+
+
+
 
 </android.support.constraint.ConstraintLayout>
