--- a/app/src/main/res/layout/activity_main_tab_list.xml
+++ b/app/src/main/res/layout/activity_main_tab_list.xml
@@ -23,6 +23,7 @@
         android:textSize="24sp"
         android:paddingTop="16dp"
         android:paddingLeft="8dp"
+        android:paddingRight="16dp"
         app:layout_constraintTop_toBottomOf="@id/tab_list_button_customlists"
         app:layout_constraintLeft_toLeftOf="parent"
         />
