--- a/app/src/main/res/layout/activity_main_tab_list.xml
+++ b/app/src/main/res/layout/activity_main_tab_list.xml
@@ -29,7 +29,7 @@
         />
 
     <ScrollView
-        android:id="@+id/tab_list_scrollview_recommended"
+        android:id="@+id/tab_list_scrollview"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -40,6 +40,15 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        >
+
+        <LinearLayout
+            android:id="@+id/tab_list_recommended"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            />
+
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
