--- a/app/src/main/res/layout/view_listitem_book.xml
+++ b/app/src/main/res/layout/view_listitem_book.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="12dp"
-    android:background="@drawable/listitem_border">
+    android:background="@drawable/listitem_border"
+    android:layout_marginBottom="8dp">
 
     <TextView
         android:id="@+id/listitem_label_title"
