--- a/app/src/main/res/layout/activity_main_tab_search.xml
+++ b/app/src/main/res/layout/activity_main_tab_search.xml
@@ -1,6 +1,221 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fillViewport="true"
+    android:focusableInTouchMode="true">
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/search_layout_const"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp">
+
+        <TextView
+            android:id="@+id/search_label_guide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search for a book by any number of criteria"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            app:layout_constraintTop_toTopOf="@id/search_layout_const"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintRight_toRightOf="@id/search_layout_const"
+            />
+
+        <TextView
+            android:id="@+id/search_label_guidehint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="(You must choose at least one)"
+            android:textAlignment="center"
+            android:textSize="18sp"
+            android:textStyle="italic"
+            android:paddingBottom="24dp"
+            app:layout_constraintTop_toBottomOf="@id/search_label_guide"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintRight_toRightOf="@id/search_layout_const"
+            />
+
+        <TextView
+            android:id="@+id/search_label_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Title:"
+            android:paddingRight="8dp"
+            android:paddingBottom="24dp"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintTop_toBottomOf="@id/search_label_guidehint"
+            />
+
+        <EditText
+            android:id="@+id/search_field_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="Title..."
+            app:layout_constraintBaseline_toBaselineOf="@id/search_label_title"
+            app:layout_constraintLeft_toRightOf="@id/search_label_title"
+            app:layout_constraintRight_toRightOf="@id/search_layout_const"
+            />
+
+        <TextView
+            android:id="@+id/search_label_author"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Author:"
+            android:paddingRight="8dp"
+            android:paddingBottom="24dp"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintTop_toBottomOf="@id/search_label_title"
+            />
+
+        <EditText
+            android:id="@+id/search_field_author"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="Author..."
+            app:layout_constraintBaseline_toBaselineOf="@id/search_label_author"
+            app:layout_constraintLeft_toRightOf="@id/search_label_author"
+            app:layout_constraintRight_toRightOf="@id/search_layout_const"
+            />
+
+        <TextView
+            android:id="@+id/search_label_publishfrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Published From"
+            android:paddingRight="8dp"
+            android:paddingBottom="24dp"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintTop_toBottomOf="@id/search_label_author"
+            />
+
+        <EditText
+            android:id="@+id/search_field_publishfrom"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:hint="year"
+            app:layout_constraintBaseline_toBaselineOf="@id/search_label_publishfrom"
+            app:layout_constraintLeft_toRightOf="@id/search_label_publishfrom"
+            />
+
+        <TextView
+            android:id="@+id/search_label_publishto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="to"
+            android:paddingRight="8dp"
+            android:paddingBottom="24dp"
+            app:layout_constraintBaseline_toBaselineOf="@id/search_field_publishfrom"
+            app:layout_constraintLeft_toRightOf="@id/search_field_publishfrom"
+            />
+
+        <EditText
+            android:id="@+id/search_field_publishto"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:hint="year"
+            app:layout_constraintBaseline_toBaselineOf="@id/search_label_publishto"
+            app:layout_constraintLeft_toRightOf="@id/search_label_publishto"
+            />
+
+        <TextView
+            android:id="@+id/search_label_pagefrom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Page Count From"
+            android:paddingRight="8dp"
+            android:paddingBottom="24dp"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintTop_toBottomOf="@id/search_label_publishfrom"
+            />
+
+        <EditText
+            android:id="@+id/search_field_pagefrom"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:hint="pages"
+            app:layout_constraintBaseline_toBaselineOf="@id/search_label_pagefrom"
+            app:layout_constraintLeft_toRightOf="@id/search_label_pagefrom"
+            />
+
+        <TextView
+            android:id="@+id/search_label_pageto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="to"
+            android:paddingRight="8dp"
+            android:paddingBottom="24dp"
+            app:layout_constraintBaseline_toBaselineOf="@id/search_field_pagefrom"
+            app:layout_constraintLeft_toRightOf="@id/search_field_pagefrom"
+            />
+
+        <EditText
+            android:id="@+id/search_field_pageto"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:hint="pages"
+            app:layout_constraintBaseline_toBaselineOf="@id/search_label_pageto"
+            app:layout_constraintLeft_toRightOf="@id/search_label_pageto"
+            />
+
+        <TextView
+            android:id="@+id/search_label_includedgenres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Included Genres:"
+            android:paddingBottom="8dp"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintTop_toBottomOf="@id/search_label_pagefrom"
+            />
+
+        <include
+            android:id="@+id/search_flexbox_includedgenres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/search_label_includedgenres"
+            layout="@layout/view_flexbox"
+            />
+
+        <TextView
+            android:id="@+id/search_label_excludedgenres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Excluded Genres:"
+            android:paddingBottom="8dp"
+            android:paddingTop="24dp"
+            app:layout_constraintLeft_toLeftOf="@id/search_layout_const"
+            app:layout_constraintTop_toBottomOf="@id/search_flexbox_includedgenres"
+            />
+
+        <include
+            android:id="@+id/search_flexbox_excludedgenres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/search_label_excludedgenres"
+            layout="@layout/view_flexbox"
+            />
+
+        <Button
+            android:id="@+id/search_button_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Search"
+            app:layout_constraintTop_toBottomOf="@id/search_flexbox_excludedgenres"
+            app:layout_constraintRight_toRightOf="@id/search_layout_const"
+            app:layout_constraintBottom_toBottomOf="@id/search_layout_const"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="32dp"
+            />
+
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
