added focus fixing. see FocusFixer for details

--- a/app/src/main/res/layout/activity_createacc.xml
+++ b/app/src/main/res/layout/activity_createacc.xml
@@ -93,6 +93,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="number"
+            android:hint="years"
             app:layout_constraintBaseline_toBaselineOf="@id/createacc_label_age"
             app:layout_constraintLeft_toRightOf="@id/createacc_label_age"
             app:layout_constraintRight_toRightOf="@id/createacc_layout_const"
