--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".activity.ListActivity">
+    tools:context=".activity.ListActivityBase">
 
     <TextView
         android:id="@+id/list_label_title"
@@ -13,22 +14,44 @@
         android:layout_gravity="center_horizontal"
         android:text="list_name_here"
         android:textSize="24sp"
-        android:padding="16dp"/>
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
 
-    <ScrollView
-        android:id="@+id/list_layout_scrollview"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/list_label_listempty"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Empty"
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toBottomOf="@id/list_label_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:visibility="gone"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/list_layout_listrecyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:fillViewport="true"
         android:focusableInTouchMode="true"
-        android:padding="8dp">
+        android:padding="8dp"
+        app:layout_constraintTop_toBottomOf="@id/list_label_title"
+        app:layout_constraintBottom_toTopOf="@id/list_button_actionbutton"
+        />
 
-        <LinearLayout
-            android:id="@+id/list_layout_listcontainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+    <Button
+        android:id="@+id/list_button_actionbutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="action_label_here"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
-    </ScrollView>
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
