--- a/app/src/main/res/layout/activity_main_tab_list.xml
+++ b/app/src/main/res/layout/activity_main_tab_list.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/tab_list_button_customlists"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View Custom Lists"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
         />
 
     <TextView
@@ -21,34 +20,17 @@
         android:layout_height="wrap_content"
         android:text="Recommended Books"
         android:textSize="24sp"
-        android:paddingTop="16dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tab_list_button_customlists"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_gravity="start"
+        android:paddingStart="8dp"
+        android:paddingEnd="16dp"
         />
 
-    <ScrollView
-        android:id="@+id/tab_list_layout_scrollview"
-        android:layout_width="0dp"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/tab_list_layout_listrecyclerview"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
-        android:focusableInTouchMode="true"
-        android:padding="4dp"
         android:background="#e3e3e3"
-        app:layout_constraintTop_toBottomOf="@id/tab_list_label_recommended"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
+        />
 
-        <LinearLayout
-            android:id="@+id/tab_list_recommended"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            />
-
-    </ScrollView>
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
