--- a/app/src/main/res/layout/listitem_book.xml
+++ b/app/src/main/res/layout/listitem_book.xml
@@ -4,7 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/listitem_border"
-    android:layout_margin="16dp">
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginBottom="8dp">
 
     <TextView
         android:id="@+id/listitem_book_label_title"
