--- a/app/src/main/res/layout/listitem_booklist.xml
+++ b/app/src/main/res/layout/listitem_booklist.xml
@@ -4,9 +4,9 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/listitem_border"
-    android:layout_marginBottom="16dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginLeft="16dp">
+    android:layout_marginBottom="8dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp">
 
     <TextView
         android:id="@+id/listitem_booklist_label_listtitle"
