--- a/app/src/main/res/layout/activity_main_tab_list.xml
+++ b/app/src/main/res/layout/activity_main_tab_list.xml
@@ -28,7 +28,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/tab_list_layout_listrecyclerview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:fillViewport="true"
         android:background="#e3e3e3"
         />
