--- a/app/src/main/res/layout/fragment_tab_list.xml
+++ b/app/src/main/res/layout/fragment_tab_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fragment_tab_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
@@ -29,8 +30,6 @@
         android:id="@+id/tab_list_layout_listrecyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fillViewport="true"
-        android:background="#e3e3e3"
         />
 
 </LinearLayout>
